fix(core): retrait overflow hidden du container-fluid

--- a/src/dsfr/core/style/grid/tool/_grid.scss
+++ b/src/dsfr/core/style/grid/tool/_grid.scss
@@ -79,7 +79,6 @@
         #{ns('container' + $mod + '--fluid')} {
           @include padding-x(0);
           @include max-size(none);
-          overflow: hidden;
         }
       }
 
